fdo#70666 fix Graphite ligature replacement at line breaks

Change-Id: I5b7c149f7f419ba18bd2cc59f4e77a0b61280caa